[package]
name = "actix-web-demo3"
version = "0.1.0"
authors = ["dengshenglong <dslchd@@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 添加actix-web 3.0版本依赖
#actix-web = { version = "3", features = ["openssl"] }
#openssl = { version = "0.10" }
actix-web = "3"
# 序列化
serde = "1.0.116"
serde_json = "1.0.57"
futures = "0.3.5"

