[package]
name = "actix-web-demo3"
version = "0.1.0"
authors = ["dengshenglong <dslchd@@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 添加actix-web 3.0版本依赖
#actix-web = { version = "3", features = ["openssl"] }
#openssl = { version = "0.10" }
actix-web = "3"
# 异步请求与响应操作的组合器
actix-service = "1.0.6"
actix-session = "0.4.0"
actix-files = "0.3.0"
# 序列化
serde = "1.0.116"
serde_json = "1.0.57"
futures = "0.3.5"
env_logger = "0.7"
bytes = "0.5"
rand = "0.7.3"
derive_more = "0.99.10"
log = "0.4.11"